@@ -81,7 +81,7 @@
 
 #define PREMAKE_MAJOR		"0"
 #define PREMAKE_MINOR		"5"
-#define PREMAKE_SUB		"0" /* only used for snapshots */
+#define PREMAKE_SNAP		"0" /* only used for snapshots */
 #define PREMAKE_VERSION		PREMAKE_MAJOR "." PREMAKE_MINOR
 
 #define PREMAKE_FILENAME	"pmkfile"
